# remote_exec

./: .gitignore  CMakeLists.txt  Dockerfile.builder  README.md  build.sh  usage example public
src/: CMakeLists.txt  hello_world.cpp  main.cpp
